# gana

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  myproject.toml  prog.ipynb  pyproject.toml  requirements.txt  sol.json
.github/workflows/: python-package.yml  test.yaml  test.yml
docs/: changelog.rst  conf.py  gana.block.program.rst  gana.block.rst  gana.block.solution.rst  gana.operators.composition.rst  gana.operators.convolution.rst  gana.operators.rst  gana.operators.sigma.rst  gana.programs.energy_system.rst  gana.programs.rst  gana.rst  gana.sets.birth.rst  gana.sets.cases.rst  gana.sets.constraint.rst  gana.sets.function.rst  gana.sets.index.rst  gana.sets.objective.rst  gana.sets.parameter.rst  gana.sets.rst  gana.sets.theta.rst  gana.sets.variable.rst  gana.shapes.box.rst  gana.shapes.edge.rst  gana.shapes.facet.rst  gana.shapes.rst  gana.shapes.vertex.rst  gana.utils.decorators.rst  gana.utils.printing.rst  gana.utils.rst  gana.value.bigm.rst  gana.value.rst  gana.value.zero.rst  index.rst  modules.rst  requirements.txt
docs/_autosummary/: gana.block.program.rst  gana.block.rst  gana.block.solution.rst  gana.examples.rst  gana.operators.composition.rst  gana.operators.convolution.rst  gana.operators.rst  gana.operators.sigma.rst  gana.programs.energy_system.rst  gana.programs.rst  gana.rst  (+22 more)
source/: conf.py  index.rst
tests/: element_test.py  idx_test.py  integration_test.py  m_test.py  mpsol_test.py  operation_test.py  par_test.py  sets_test.py  sol_test.py  sum_test.py  test_fixtures.py  value_test.py  var_test.py
(+112 files in other folders)
