[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gana"
version = "1.0.0"
authors = [
  { name="Rahul Kakodkar", email="cacodcar@gmail.com" },
]
maintainers = [
  { name="Rahul Kakodkar", email="cacodcar@gmail.com" },
]
description = "A barebones mathematical programming package"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["modeling", "optimization", "programming", "aml"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["ppopt"]
[project.optional-dependencies]
all = ["gurobipy",  "pyomo", "sympy", "IPython"]
test = ["coverage", "pytest"]
docs = [
    'sphinx.ext.autodoc',
    'sphinx.ext.napoleon',
    'nbsphinx',
    'sphinx.ext.mathjax',
    'myst-parser'  # Replacing sphinx-mdinclude
]
[project.urls]
Homepage = "https://github.com/cacodcar/gana"
Issues = "https://github.com/cacodcar/gana/issues"
